--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,12 @@
 // Variables
 @import 'variables';
 
+
+
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/css/all.css';
+
+
+
